[package]
name = "gitgnosis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dotenvy = "0.15.7"
openai_api_rust = "0.1.9"
palm_api = {path = "../palm_api"}
# palm_api = { git = "https://github.com/dsteeley/palm_api.git"}
